--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:design:27.0.2'
+    implementation 'com.android.support:cardview-v7:27.1.0'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.android.support:recyclerview-v7:27.0.2'
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
